2011-03-07  Omair Majid  <omajid@redhat.com>

	* Makefile.am (ICEDTEA_PATCHES): Apply
	patches/jtreg-remove-test-6987555.patch and
	patches/jtreg-remove-test-6991596.patch only on ALT_HSBUILD.

2011-03-07  Pavel Tisnovsky  <ptisnovs@redhat.com>

	* Makefile.am: Added two new patches.
	* patches/jtreg-remove-test-6987555.patch:
	Patch to remove regression test
	hotspot/test/compiler/6987555/Test6987555
	which is not valid for OpenJDK6
	* patches/jtreg-remove-test-6991596.patch:
	Patch to remove regression test
	hotspot/test/compiler/6991596/Test6991596
	which is not valid for OpenJDK6

2011-02-24  Matthias Klose  <doko@ubuntu.com>

	* Makefile.am (jtregcheck): Allow setting which tests to run.

2011-03-04  Xerxes Ranby  <xerxes@zafena.se>

	CACAO: Ignore all unknown options.
	* Makefile.am: Add CACAO patch.
	* patches/cacao/ignore-unknown-options.patch: Added.

2011-03-03  Xerxes Ranby  <xerxes@zafena.se>

	JamVM: Ignore all unknown options.
	* Makefile.am: Replaced JamVM patch.
	* patches/jamvm/ignore-more-XX-options.patch: Removed.
	* patches/jamvm/ignore-unknown-options.patch: Added.

2011-03-03  Andrew John Hughes  <ahughes@redhat.com>

	* INSTALL: Update documentation
	to match current settings.
	* NEWS: Mention change to hs20.
	* acinclude.m4: Default to using hs20.

2011-03-03  Andrew John Hughes  <ahughes@redhat.com>

	* patches/security/20110215/6927050.patch:
	Remove no longer used patch.

2011-03-02  Andrew John Hughes  <ahughes@redhat.com>

	* Makefile.am:
	(icedtea): Explicitly set -j1 for the
	legacy OpenJDK build as it can't handle
	parallelism correctly.  This allows the
	main IcedTea build to be parallel while
	still allowing OpenJDK to build.
	(icedtea-debug): Likewise.
	(icedtea-ecj): Likewise.

2011-03-02  Andrew John Hughes  <ahughes@redhat.com>

	* Makefile.am:
	Apply 6878713 for hs20 which still doesn't
	have it.  Make HotSpot conditional patching
	clearer.
	* patches/security/20110215/6878713.patch:
	Readded.
