@@ -1,3 +1,10 @@
+2011-03-08  Pavel Tisnovsky  <ptisnovs@redhat.com>
+
+	* Makefile.am:
+	Added checking of JTreg results - if at least one
+	regression test failed, make exits with error code
+	* NEWS: Updated, added PR637 to a list of bug fixes.
+
 2011-03-07  Omair Majid  <omajid@redhat.com>
 
 	* Makefile.am (ICEDTEA_PATCHES): Apply
